ui/webui/resources/wasm/vendor/zerocopy-derive/tests/ui-msrv/msrv_specific.stderr
warning: unused `#[macro_use]` import
  --> tests/ui-msrv/msrv_specific.rs:12:1
   |
12 | #[macro_use]
   | ^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

error[E0277]: the trait bound `AU16: zerocopy::Unaligned` is not satisfied
  --> tests/ui-msrv/msrv_specific.rs:36:9
   |
36 |         is_into_bytes_1::<IntoBytes1<AU16>>();
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `zerocopy::Unaligned` is not implemented for `AU16`
   |
note: required because of the requirements on the impl of `zerocopy::IntoBytes` for `IntoBytes1<AU16>`
  --> tests/ui-msrv/msrv_specific.rs:25:10
   |
25 | #[derive(IntoBytes)]
   |          ^^^^^^^^^
note: required by a bound in `is_into_bytes_1`
  --> tests/ui-msrv/msrv_specific.rs:34:23
   |
34 | fn is_into_bytes_1<T: IntoBytes>() {
   |                       ^^^^^^^^^ required by this bound in `is_into_bytes_1`
   = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)
